css/index.css
/* Fonts */
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900');
@import url('clash-grotesk.css');

/* ClashGrotesk-Variable */
/* Colors */
:root {
  --lightgray: #e0e0e0;
  --gray: #C0C0C0;
  --darkgray: #333;
  --navy: #17050F;
  --blue: #082840;
  --white: #fff;
  --lightblack: rgb(51, 51, 51);
  --maxw: 43rem;
  --headerText: 'ClashGrotesk-Variable';
  --bodyText: -apple-system, system-ui, sans-serif;
}

/* Global stylesheet */
* {
  box-sizing: border-box;
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, system-ui, sans-serif;
  color: var(--darkgray);
  background-color: var(--white);
  overflow-x: hidden;
}

p:last-child {
  margin-bottom: 0;
}

p,
.tmpl-post li,
img {
  max-width: 100%;
}

img[src*="#imageborder"] {
  border: 0.3px solid;
  /* max-width: 90%;
  margin: auto;
  display: block; */
}

img[src*="#fullwidth"] {
  padding: 0 1rem;
  width: 100vw;
  max-width: 100vw;
  /* height: 600px; */
  margin: 0 calc(50% - 50vw);
  object-fit: cover;
  margin-top: 2rem;
}

img {
  margin-top: 2rem;
}

em {
  font-size: 12px;
  color: grey;
  font-style: normal;
  font-weight: 300;
}

p,
.tmpl-post li {
  font-size: 16px;
  line-height: 1.7;
  font-family: var(--bodyText);
  font-weight: 370;
}

main {
  padding: 1rem;
  max-width: var(--maxw);
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 5rem;
}

main :first-child {
  /* margin-top: 0; */
}

.postlist-item a {
  color: black;
}

footer {
  padding: 1rem;
  max-width: var(--maxw);
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 3rem;
}

.main-footer {
  max-width: var(--maxw);
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 3rem;
  border-bottom: 1px solid #eee;
  font-size: 12px;
  line-height: 1.6;
  color: rgb(91, 91, 91);
}

/* Header */
header {
  /* border-bottom: 1px dashed var(--lightgray); */
  padding-top: 1rem;
  padding-bottom: 0.3rem;
  margin-bottom: 3rem;
  border-bottom: 1px solid #eee;
  box-sizing: border-box;
  display: block;
}

a {
  color: black;
}

header:after {
  content: "";
  display: table;
  clear: both;
}

h1 {
  font-size: 45pt;
  font-family: var(--headerText);
  font-weight: 500;
  color: var(--lightblack);
  margin-bottom: 1rem;
}

h1 a:hover {
  text-decoration: none;
  background: linear-gradient(120deg, rgb(81, 77, 165) 0%, rgba(9, 9, 121, 1) 27%, rgba(175, 5, 83, 1) 72%, rgba(0, 212, 255, 1) 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  transition: 300ms ease-in;
}

.tmpl-post h1 {
  background: linear-gradient(120deg, rgb(81, 77, 165) 0%, rgba(9, 9, 121, 1) 27%, rgba(175, 5, 83, 1) 72%, rgba(0, 212, 255, 1) 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

h2 {
  margin-top: 5rem;
  font-family: var(--headerText);
  font-weight: 500;
  font-size: 21pt;
  color: var(--lightblack);
}

h4 {
  /* font-family: var(--headerText); */
  letter-spacing: 0.1rem;
  font-weight: 450;
  margin-top: 2rem;
  margin-bottom: 0.5rem;
  text-transform: uppercase;
  font-size: 13px;
  /* color: rgb(110, 110,110); */
  /* border-bottom: 1px solid #eee; */
}

span {
  font-family: var(--headerText);
  line-height: 1.5;
  font-size: 19px;
  font-weight: 450;
  color: black;
  margin-bottom: 10rem;
  margin-top: 0;
}

blockquote {
  max-width: 95%;
  font-family: var(--headerText);
  line-height: 1.6;
  font-size: 23px;
  font-weight: 450;
  color: black;
  margin: 3rem auto;
  padding: 2rem 0;
  border-bottom: 1px solid #eee;
  border-top: 1px solid #eee;
  /* margin-bottom: 10rem; */
  /* margin-top: 0; */
}

.home {
  display: block;
  max-width: var(--maxw);
  padding-left: 1rem;
  padding-right: 1rem;
  margin-left: auto;
  margin-right: auto;
  letter-spacing: -.025rem;
  margin-top: 0;
  margin-bottom: 0;
  color: #505050;
  text-rendering: optimizeLegibility;
  font-size: 20px;
}

.home :link:not(:hover) {
  text-decoration: none;
}

table {
  margin: 1em 0;
}

table td,
table th {
  padding-right: 1em;
}

pre,
code {
  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
  line-height: 1.5;
}

pre {
  font-size: 14px;
  line-height: 1.375;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  -moz-tab-size: 2;
  -o-tab-size: 2;
  tab-size: 2;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
  padding: 1em;
  margin: .5em 0;
  background-color: #f6f6f6;
}

code {
  word-break: break-all;
}

.highlight-line {
  display: block;
  padding: 0.125em 1em;
  text-decoration: none;
  /* override del, ins, mark defaults */
  color: inherit;
  /* override del, ins, mark defaults */
}

/* allow highlighting empty lines */
.highlight-line:empty:before {
  content: " ";
}

/* avoid double line breaks when using display: block; */
.highlight-line+br {
  display: none;
}

.highlight-line-isdir {
  color: #b0b0b0;
  background-color: #222;
}

.highlight-line-active {
  background-color: #444;
  background-color: hsla(0, 0%, 27%, .8);
}

.highlight-line-add {
  background-color: #45844b;
}

.highlight-line-remove {
  background-color: #902f2f;
}

/* Header */
/* .home {
  display: block;
  padding: 0 1rem;
  float: left;
  margin: 1rem 0;
  font-size: 1em;
  margin-left: auto;
  margin-right: auto;
  max-width: 40rem;
} */
/* Nav */
.nav {
  padding: 0;
  list-style: none;
  float: left;
  margin-left: 1em;
}

.nav-item {
  display: inline-block;
  margin-right: 1em;
}

.nav-item a[href]:not(:hover) {
  text-decoration: none;
}

.nav-item-active {
  font-weight: 700;
  text-decoration: underline;
}

/* Posts list */
.postlist {
  list-style: none;
  padding: 0;
}

.postlist-item {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  counter-increment: start-from -1;
  line-height: 1.8;
}
/* ... */

